samples/_failures_safe/1761527067_08dbd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94089f0b.c: In function ‘main’:
./samples/SAFE/__tmp_94089f0b.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nFirst matrix:\n");
      |     ^~~~~~
